--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,9 @@
-deploy.ant.properties.file=/home/fsantiago/.netbeans/7.1.1/gfv3576454301.properties
+deploy.ant.properties.file=/home/fsantiago/.netbeans/7.1.1/tomcat70.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/fsantiago/glassfish-3.1.2/glassfish/domains/domain1
-j2ee.server.home=/home/fsantiago/glassfish-3.1.2/glassfish
-j2ee.server.instance=[/home/fsantiago/glassfish-3.1.2/glassfish:/home/fsantiago/glassfish-3.1.2/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.domain=/home/fsantiago/.netbeans/7.1.1/apache-tomcat-7.0.22.0_base
+j2ee.server.home=/home/fsantiago/apache-tomcat-7.0.22
+j2ee.server.instance=tomcat70:home=/home/fsantiago/apache-tomcat-7.0.22:base=apache-tomcat-7.0.22.0_base
 j2ee.server.middleware=/home/fsantiago/glassfish-3.1.2
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/home/fsantiago/.netbeans/7.1.1/build.properties
